<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".experience">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Classic -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/classic">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/classic_title"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/goudy_bookletter_1911"/>

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/classic_content"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </RelativeLayout>
            <!-- IMAX -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/imax">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/imax_title"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textColor="@android:color/white"
                        android:fontFamily="@font/goudy_bookletter_1911"/>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/imax_content"
                        android:textColor="@android:color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </RelativeLayout>
            <!-- DELUXE+ -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/deluxe">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deluxe_title"
                        android:textAlignment="center"
                        android:fontFamily="@font/goudy_bookletter_1911"
                        android:textColor="@android:color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deluxe_content"
                        android:textSize="18sp"
                        android:textColor="@android:color/white"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>