<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    tools:context=".popular">
    <!--Sub Action Bar -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="#252525"
            app:srcCompat="@drawable/back1"
            tools:srcCompat="@drawable/back_button" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/title_popular"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </LinearLayout>
    <!-- Separate Line -->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#ffff00"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="-47dp" />
    <!-- Movies-->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#252525"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="3"
            android:columnOrderPreserved="false"
            android:padding="4dp"
            android:rowCount="3">

            <!--Row 1-->
            <!--Column 1-->
            <RelativeLayout
                android:id="@+id/CardView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="4dp"
                    android:background="#252525"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="125dp"
                        android:layout_height="160dp"
                        app:srcCompat="@drawable/my_hero_academia___heros_rising" />

                    <TextView
                        android:id="@+id/myhero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#252525"
                        android:fontFamily="@font/goudy_bookletter_1911"
                        android:text="@string/my_hero_academia"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>

            <!--Column 2-->
            <RelativeLayout
                android:id="@+id/CardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="125dp"
                        android:layout_height="160dp"
                        app:srcCompat="@drawable/the_old_guard" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/goudy_bookletter_1911"
                        android:text="@string/the_old_guard"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>

            <!--Column 3-->
            <RelativeLayout
                android:id="@+id/CardView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="125dp"
                        android:layout_height="160dp"
                        app:srcCompat="@drawable/bloodshot" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/goudy_bookletter_1911"
                        android:text="@string/bloodshot"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>

            <!--Row 2-->
            <!--Column 1-->
            <RelativeLayout
                android:id="@+id/CardView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="160dp"
                        app:srcCompat="@drawable/fantasy_island" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/goudy_bookletter_1911"
                        android:text="@string/fantasy_island"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>

            <!--Column 2-->
            <RelativeLayout
                android:id="@+id/CardView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="160dp"
                        app:srcCompat="@drawable/underwater" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/goudy_bookletter_1911"
                        android:text="@string/underwater"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>

            <!--Column 3-->
            <RelativeLayout
                android:id="@+id/CardView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="160dp"
                        app:srcCompat="@drawable/the_grudge_2020" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/goudy_bookletter_1911"
                        android:text="@string/the_grudge"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>

            <!--Row 3-->
            <!--Column 1-->
            <RelativeLayout
                android:id="@+id/CardView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="160dp"
                        app:srcCompat="@drawable/onward_" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/goudy_bookletter_1911"
                        android:text="@string/onward"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>

            <!--Column 2-->
            <RelativeLayout
                android:id="@+id/CardView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="160dp"
                        app:srcCompat="@drawable/black_water___abyss" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/goudy_bookletter_1911"
                        android:text="@string/black_water"
                        android:textAlignment="center"
                        android:textColor="@android:color/white" />
                </LinearLayout>
            </RelativeLayout>
        </GridLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>